--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ markdown: kramdown
 gems:
   - jekyll-sitemap
 
-name: Zach Holman
-url: https://zachholman.com/left
-description: A fantastic blog that is fantastic.
-twitter: holman
+name: Hugh Bird
+url: 
+description: On engineering
